fix alignment

--- a/style.scss
+++ b/style.scss
@@ -327,8 +327,8 @@ body {
 
             #house-placeholder {
                 width: 10rem;
-                height: 10rem;
-                margin: .5rem 3rem;
+                height: calc(10rem + 5px);
+                margin: .5rem 3rem 1.2rem 3rem;
             }
         }
 
